# kuflow-samples-python

./: .gitignore  .tool-versions  README.md  pyproject.toml
kuflow-samples-expense-reimbursement/: .tool-versions  README.md  pyproject.toml
kuflow-samples-expense-reimbursement/kuflow_samples_expense_reimbursement/: __init__.py  worker.py  workflow.py
kuflow-samples-kubot-desktop-screenshot/: README.md  kubot.yaml  pyproject.toml
kuflow-samples-kubot-desktop-screenshot/kuflow_samples_kubot_desktop_screenshot/: _models.py  models.py  tasks-desktop-screenshot-to-kuflow.py  tasks-desktop-screenshot.py
kuflow-samples-kubot-google-images/: README.md  kubot.yaml  pyproject.toml
kuflow-samples-kubot-google-images/kuflow_samples_kubot_google_images/: tasks-google-images.py
kuflow-samples-temporal-loan/: README.md  pyproject.toml
kuflow-samples-temporal-loan/kuflow_samples_temporal_loan/: worker.py  workflow.py
kuflow_samples_temporal_loan/: __init__.py  activities.py  application.yaml  worker.py  workflow.py
scripts/: projects.sh
