[tool.poetry]
name = "kuflow-samples-python"
version = "0.1.0"
description = "KuFlow Python SDK samples"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-samples-python"
license = "MIT"
readme = "README.md"
packages = [
    { include = "**/*.py", from = "."  }
]

[tool.poetry.dependencies]
deepmerge = "^1.1.0"
kuflow-temporal-activity-kuflow = "^1.1.0"
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^23.1.0"
pytest = "^7.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
testpaths = ["tests"]
python_files= "test_*.py"

[tool.isort]
profile = "black"
skip_gitignore = true
