[tool.poetry]
name = "kuflow-samples-temporal-loan"
version = "0.1.0"
description = "KuFlow Python SDK samples"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-samples-python"
license = "MIT"
readme = "README.md"
packages = [
    { include = "**/*.py", from = "."  }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
deepmerge = "^1.1.0"
kuflow-temporal-activity-kuflow = "^2.1.0"
kuflow-temporal-workflow-kuflow = "^2.1.0"
kuflow-temporal-worker = "^2.1.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.8,<1.0.0"
pytest = "^7.2.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
testpaths = ["tests"]
python_files= "test_*.py"
